--- a/cabal.project
+++ b/cabal.project
@@ -6,6 +6,7 @@ source-repository-package
     type: git
     location: https://github.com/wz1000/shake
     tag: fb3859dca2e54d1bbb2c873e68ed225fa179fbef
+    --sha256: 0sa0jiwgyvjsmjwpfcpvzg2p7277aa0dgra1mm6afh2rfnjphz8z
 
 -- See https://github.com/haskell-hvr/cabal-plan/pull/55
 source-repository-package
