--- a/stack-8.6.4.yaml
+++ b/stack-8.6.4.yaml
@@ -1,73 +1,72 @@
 resolver: lts-13.19 # Last 8.6.4
 
 packages:
-- .
-- ./ghcide/
+    - .
+    - ./ghcide/
 
 extra-deps:
-- aeson-1.4.3.0
-- brittany-0.12.1.0
-- butcher-1.3.2.1
-- bytestring-trie-0.2.5.0
-- Cabal-3.0.2.0
-- cabal-doctest-1.0.8
-- cabal-helper-1.1.0.0
-- cabal-plan-0.5.0.0
-- constrained-dynamic-0.1.0.0
-# - ghcide-0.1.0
-- extra-1.6.21
-- floskell-0.10.3
-- fuzzy-0.1.0.0
-- ghc-check-0.3.0.1
-- ghc-exactprint-0.6.2 # for HaRe
-- ghc-lib-parser-8.10.1.20200523
-- ghc-lib-parser-ex-8.10.0.4
-- ghc-paths-0.1.0.12
-- haddock-api-2.22.0@rev:1
-- haddock-library-1.8.0
-- happy-1.19.12
-- haskell-lsp-0.22.0.0
-- haskell-lsp-types-0.22.0.0
-- haskell-src-exts-1.21.1
-- hie-bios-0.5.0
-- hlint-2.2.8
-- hoogle-5.0.17.11
-- hsimport-0.11.0@rev:2
-- lens-4.18
-- lsp-test-0.10.3.0
-- microlens-th-0.4.2.3@rev:1
-- monad-dijkstra-0.1.1.2
-- monad-memo-0.4.1
-- multistate-0.8.0.1
-- ormolu-0.0.5.0
-- opentelemetry-0.4.0
-- parser-combinators-1.2.1
-- regex-base-0.94.0.0
-- regex-tdfa-1.3.1.0
-- rope-utf16-splay-0.3.1.0
-# - shake-0.18.5
-- github: wz1000/shake
-  commit: fb3859dca2e54d1bbb2c873e68ed225fa179fbef
-- syz-0.2.0.0
-- tasty-rerun-1.1.17
-- temporary-1.2.1.1
-- th-abstraction-0.3.1.0
-- type-equality-1
-- unix-compat-0.5.2
-- unordered-containers-0.2.10.0
-- yaml-0.11.1.2
-# To make build work in windows 7
-- unix-time-0.4.7
-
+    - aeson-1.4.3.0
+    - brittany-0.12.1.0
+    - butcher-1.3.2.1
+    - bytestring-trie-0.2.5.0
+    - Cabal-3.0.2.0
+    - cabal-doctest-1.0.8
+    - cabal-helper-1.1.0.0
+    - cabal-plan-0.5.0.0
+    - constrained-dynamic-0.1.0.0
+    # - ghcide-0.1.0
+    - extra-1.6.21
+    - floskell-0.10.3
+    - fuzzy-0.1.0.0
+    - ghc-check-0.3.0.1
+    - ghc-exactprint-0.6.2 # for HaRe
+    - ghc-lib-parser-8.10.1.20200523
+    - ghc-lib-parser-ex-8.10.0.4
+    - ghc-paths-0.1.0.12
+    - haddock-api-2.22.0@rev:1
+    - haddock-library-1.8.0
+    - happy-1.19.12
+    - haskell-lsp-0.22.0.0
+    - haskell-lsp-types-0.22.0.0
+    - haskell-src-exts-1.21.1
+    - hie-bios-0.5.0
+    - hlint-2.2.8
+    - hoogle-5.0.17.11
+    - hsimport-0.11.0@rev:2
+    - lens-4.18
+    - lsp-test-0.10.3.0
+    - microlens-th-0.4.2.3@rev:1
+    - monad-dijkstra-0.1.1.2
+    - monad-memo-0.4.1
+    - multistate-0.8.0.1
+    - ormolu-0.0.5.0
+    - opentelemetry-0.4.0
+    - parser-combinators-1.2.1
+    - regex-base-0.94.0.0
+    - regex-tdfa-1.3.1.0
+    - rope-utf16-splay-0.3.1.0
+    # - shake-0.18.5
+    - github: wz1000/shake
+      commit: fb3859dca2e54d1bbb2c873e68ed225fa179fbef
+      # nix-sha256: 0sa0jiwgyvjsmjwpfcpvzg2p7277aa0dgra1mm6afh2rfnjphz8z
+    - syz-0.2.0.0
+    - tasty-rerun-1.1.17
+    - temporary-1.2.1.1
+    - th-abstraction-0.3.1.0
+    - type-equality-1
+    - unix-compat-0.5.2
+    - unordered-containers-0.2.10.0
+    - yaml-0.11.1.2
+    # To make build work in windows 7
+    - unix-time-0.4.7
 
 flags:
-  haskell-language-server:
-    pedantic: true
-
+    haskell-language-server:
+        pedantic: true
 
 # allow-newer: true
 
 nix:
-  packages: [ icu libcxx zlib ]
+    packages: [icu libcxx zlib]
 
 concurrent-tests: false
