--- a/stack-8.6.5.yaml
+++ b/stack-8.6.5.yaml
@@ -1,57 +1,58 @@
-resolver: lts-14.27 # Last 8.6.5 
+resolver: lts-14.27 # Last 8.6.5
 
 packages:
-- .
-- ./ghcide/
+    - .
+    - ./ghcide/
 
 extra-deps:
-- ansi-terminal-0.10.2
-- base-compat-0.11.0
-- brittany-0.12.1.1@rev:2
-- butcher-1.3.3.1
-- Cabal-3.0.2.0
-- cabal-helper-1.1.0.0
-- cabal-plan-0.6.2.0
-- clock-0.7.2
-- extra-1.7.1
-- floskell-0.10.3
-- fuzzy-0.1.0.0
-# - ghcide-0.1.0
-- ghc-check-0.3.0.1
-- ghc-lib-parser-8.10.1.20200523
-- ghc-lib-parser-ex-8.10.0.4
-- haddock-api-2.22.0@rev:1
-- haddock-library-1.8.0
-- haskell-lsp-0.22.0.0
-- haskell-lsp-types-0.22.0.0
-- hie-bios-0.5.0
-- indexed-profunctors-0.1
-- lens-4.18
-- lsp-test-0.10.3.0
-- monad-dijkstra-0.1.1.2
-- opentelemetry-0.4.0
-- optics-core-0.2
-- optparse-applicative-0.15.1.0
-- ormolu-0.0.5.0
-- parser-combinators-1.2.1
-- regex-base-0.94.0.0
-- regex-pcre-builtin-0.95.1.1.8.43
-- regex-tdfa-1.3.1.0
-- semialign-1.1
-- github: wz1000/shake
-  commit: fb3859dca2e54d1bbb2c873e68ed225fa179fbef
-- tasty-rerun-1.1.17
-- temporary-1.2.1.1
-- type-equality-1
-- topograph-1
+    - ansi-terminal-0.10.2
+    - base-compat-0.11.0
+    - brittany-0.12.1.1@rev:2
+    - butcher-1.3.3.1
+    - Cabal-3.0.2.0
+    - cabal-helper-1.1.0.0
+    - cabal-plan-0.6.2.0
+    - clock-0.7.2
+    - extra-1.7.1
+    - floskell-0.10.3
+    - fuzzy-0.1.0.0
+    # - ghcide-0.1.0
+    - ghc-check-0.3.0.1
+    - ghc-lib-parser-8.10.1.20200523
+    - ghc-lib-parser-ex-8.10.0.4
+    - haddock-api-2.22.0@rev:1
+    - haddock-library-1.8.0
+    - haskell-lsp-0.22.0.0
+    - haskell-lsp-types-0.22.0.0
+    - hie-bios-0.5.0
+    - indexed-profunctors-0.1
+    - lens-4.18
+    - lsp-test-0.10.3.0
+    - monad-dijkstra-0.1.1.2
+    - opentelemetry-0.4.0
+    - optics-core-0.2
+    - optparse-applicative-0.15.1.0
+    - ormolu-0.0.5.0
+    - parser-combinators-1.2.1
+    - regex-base-0.94.0.0
+    - regex-pcre-builtin-0.95.1.1.8.43
+    - regex-tdfa-1.3.1.0
+    - semialign-1.1
+    - github: wz1000/shake
+      commit: fb3859dca2e54d1bbb2c873e68ed225fa179fbef
+      # nix-sha256: 0sa0jiwgyvjsmjwpfcpvzg2p7277aa0dgra1mm6afh2rfnjphz8z
+    - tasty-rerun-1.1.17
+    - temporary-1.2.1.1
+    - type-equality-1
+    - topograph-1
 
 flags:
-  haskell-language-server:
-    pedantic: true
+    haskell-language-server:
+        pedantic: true
 
 # allow-newer: true
 
 nix:
-  packages: [ icu libcxx zlib ]
+    packages: [icu libcxx zlib]
 
 concurrent-tests: false
