--- a/stack-8.8.2.yaml
+++ b/stack-8.8.2.yaml
@@ -1,45 +1,46 @@
 resolver: lts-15.3 # Last 8.8.2
 
 packages:
-- .
-- ./ghcide/
+    - .
+    - ./ghcide/
 
 extra-deps:
-- apply-refact-0.7.0.0
-- bytestring-trie-0.2.5.0
-- cabal-helper-1.1.0.0
-- clock-0.7.2
-- constrained-dynamic-0.1.0.0
-- floskell-0.10.3
-# - ghcide-0.1.0
-- ghc-check-0.3.0.1
-- ghc-lib-parser-8.10.1.20200523
-- ghc-lib-parser-ex-8.10.0.4
-- haddock-library-1.8.0
-- haskell-lsp-0.22.0.0
-- haskell-lsp-types-0.22.0.0
-- haskell-src-exts-1.21.1
-- hie-bios-0.5.0
-- hlint-2.2.8
-- hoogle-5.0.17.11
-- hsimport-0.11.0
-- ilist-0.3.1.0
-- lsp-test-0.10.3.0
-- monad-dijkstra-0.1.1.2
-- opentelemetry-0.4.0
-- ormolu-0.0.5.0
-- semigroups-0.18.5
-- github: wz1000/shake
-  commit: fb3859dca2e54d1bbb2c873e68ed225fa179fbef
-- temporary-1.2.1.1
+    - apply-refact-0.7.0.0
+    - bytestring-trie-0.2.5.0
+    - cabal-helper-1.1.0.0
+    - clock-0.7.2
+    - constrained-dynamic-0.1.0.0
+    - floskell-0.10.3
+    # - ghcide-0.1.0
+    - ghc-check-0.3.0.1
+    - ghc-lib-parser-8.10.1.20200523
+    - ghc-lib-parser-ex-8.10.0.4
+    - haddock-library-1.8.0
+    - haskell-lsp-0.22.0.0
+    - haskell-lsp-types-0.22.0.0
+    - haskell-src-exts-1.21.1
+    - hie-bios-0.5.0
+    - hlint-2.2.8
+    - hoogle-5.0.17.11
+    - hsimport-0.11.0
+    - ilist-0.3.1.0
+    - lsp-test-0.10.3.0
+    - monad-dijkstra-0.1.1.2
+    - opentelemetry-0.4.0
+    - ormolu-0.0.5.0
+    - semigroups-0.18.5
+    - github: wz1000/shake
+      commit: fb3859dca2e54d1bbb2c873e68ed225fa179fbef
+      # nix-sha256: 0sa0jiwgyvjsmjwpfcpvzg2p7277aa0dgra1mm6afh2rfnjphz8z
+    - temporary-1.2.1.1
 
 flags:
-  haskell-language-server:
-    pedantic: true
+    haskell-language-server:
+        pedantic: true
 
 # allow-newer: true
 
 nix:
-  packages: [ icu libcxx zlib ]
+    packages: [icu libcxx zlib]
 
 concurrent-tests: false
